# The-lab-verse-monitoring-

./: .alignment.yml  .coderabbit.yaml  .coveragerc  .dockerignore  .env  .env.ai.example  .env.evi.example  .env.example  .env.local  .env.localai.example  .eslintignore  .eslintrc.json  .flake8  .gitignore  .gitleaksignore  .pr-description.md  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .secrets-baseline  .semgrep.yml  .vercelignore  .yamllint  404.html  AGENTS.md  AI_CONNECTIONS_README.md  AI_ORCHESTRATION_README.md  AI_SDK_TESTING_COMPLETE.md  ALL_FIXES_CHECKLIST.md  API_REFERENCE.md  ARCHITECTURE_ALIGNMENT.md  ASANA_INTEGRATION_GUIDE.md  Action (ci) snippet  BUG_REPORT.md  BUILD_SUMMARY.md  Bash_run  Browser_automation and web_search  CHANGES_SUMMARY.md  CHANGES_SUMMARY_FIXES.md  (+293 more)
.cleanup-backup-20260105-214904/: G20_BRANCH_README.md  docker-compose.yml.original  rankyak-sync-script.js
.github/: .yamllint  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  kimi-context.yaml  pr_template_prompt.txt
.husky/: commit-msg  pre-commit  pre-push
.jules/: bolt.md  config.yml  protected_paths.json  validation-report.json
.kimi/: config.toml
.zed/: settings.json
The-lab-verse-monitoring-/: .dockerignore  .env.example  Dockerfile.qwen-enhanced  docker-compose.production.yml  package-lock.json  package.json  quick-start.sh  requirements.txt  run-health-checks.sh  run-load-test.sh
agent/: config.py
agents/: agent_base.py  builder_agents.py  healer.py  requirements.txt
analysis-results/: safety.json  test.json
api/: app.py  health.js  inngest.js  jira.js  mcp_server.js  orchestrator.js  research.js  research.py  server.py  server.py.backup  util.js  webhook.js  wp.js
app/: main.py  metrics.py
assets/: clickhouse-config.xml
autoglm-sa/: COMMUNITY_SETUP.md  SAAutoGLMAgent.py  main.py  setup_sa.sh  test_SAAutoGLMAgent.py
ayrshare/: Dockerfile  README.md  post-to-social.js  publish_social.py
blog/: .gitkeep
clients/: asana_client.py  kimi.py  mailchimp_client.py
cloud-audit-results/: summary.md
cognitive-swarm/: config.yaml  main.py  requirements.txt
config/: .env.example  README.md  ai_providers.yaml  architect_prompt.py  cost_optimizer_config.yml  enhanced_alerting.json  enterprise-config.json  kimi_instruct.json  price-baseline.json
content/: zapier-ai-pipeline-test.md
content-creator-ai/: .env.example  .gitignore  .replit  API_EXAMPLES.md  CURSOR_SETUP.md  DEPLOYMENT.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  KEYWORD_RESEARCH_GUIDE.md  KEYWORD_RESEARCH_WITH_PERPLEXITY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  package.json  requirements.txt  secure-config.js  server.js  test.js
content_package/: ContentScripts.md  README.md
core/: database.py
credit_protection/: credit_dashboard.py  credit_manager.py  credit_middleware.py  demo.py  test_suite.py
crewai/: main.py  requirements.txt
css/: styles.css
data/: README.md  sample_documents.json  vaal_empire.db
deal-hunter/: package.json
docs/: AI_ORCHESTRATION_PR_SUMMARY.md  API.md  ARCHITECTURE.md  BACKGROUND_AGENTS_ZAPIER_INTEGRATION.md  COMPLETE_SETUP_GUIDE.md  ENHANCED_REVENUE_STRATEGY.md  HYBRID_AI_ARCHITECTURE.md  LOCALAI_COST_OPTIMIZATION.md  MCP_Cloud_Gateway_Integration.md  QUICK-START.md  SECURITY_AUTOMATION.md  ZAPIER_CANVAS_CONFIGURATION.md  ZAPIER_WORKFLOW_EXAMPLES.md  architecture.md  deployment_recovery_plan.md  hybrid-content-pipeline-v3.html  rankyak-universal-bridge-checklist.md  wordpress-bridge.md
examples/: README.md  autogen_opik_weather.py  generate-ads.js
handlers/: healer.py
images/: .gitkeep
industrial-chat-api/: README.md  global_footer_snippet.html  pom.xml
integrations/: connectors.py  manager.py
js/: main.js
k8s/: configmap.yaml  deployment.yaml  gpu-config.yaml  hpa.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secrets.yaml.example  service.yaml
kimi/: KIMI-CLI-SETUP-GUIDE.md  README-KIMI-CLI.md  kimi-cli-config.yml  kimi-task-prompt.md  run-with-kimi.sh
kimi-computer/: .env.example  Dockerfile  README.md  brave-campaign-config.json  deploy-fly.sh  deploy-local.sh  docker-compose.yml  fly.toml  healthcheck.sh  main.py  make-blueprint.json  package-lock.json  package.json  requirements.txt  setup-mistral.sh  test-e2e.sh
lab_verse/: agents.py  background_agent.py  config.py  llm.py  orchestrator.py  prompts.py  validators.py
lapverse-ai-brain-trust/: .gitignore  LICENCE  README.md  index.html  package-lock.json  package.json
lapverse-alpha/: docker-compose.alpha.yml  docker-compose.argilla.yml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
lapverse-core/: IMPLEMENTATION.md  QUICKSTART.md  jest.config.cjs  package-lock.json  package.json  test-ai-connector.ts  tsconfig.json  verify-deployment.sh
lib/: multitenancy.ts  speed-insights.js
mcp-server/: huggingface-gateway.js  package-lock.json  package.json  setup.sh  socialpilot-gateway.js  unito-gateway.js  wpcom-gateway.js
migrations/: env.py
modelfiles/: kimi-persona.modelfile
models/: hermes-2-pro-mistral.yaml  mistral-7b-instruct.yaml
monitoring/: .env.example  alert_rules.yml  alertmanager.yml  prometheus.yml  start-monitoring.sh
nginx/: nginx.conf  nginx.secure.conf  prod.conf
notebooks/: Getting_started_with_google_colab_ai.ipynb
openapi/: lapverse.yaml
orchestrator/: main.py  router.js
pages/: dashboard.js  index.js
prometheus/: prometheus.yml
quantumguard-v2/: Dockerfile  go.mod  main.go
rainmaker-orchestrator/: .env.example  Dockerfile  auto_switch.py  browser_agent.py  orchestrator.py  requirements.txt  token_estimator.py
rainmaker_orchestrator/: .env.example  .gitignore  Dockerfile  __init__.py  config.py  fs_agent.py  orchestrator.py  patent_agent.py  requirements.txt  router.js  server.py
rules/: vercel-secrets.yml
scheduler/: Dockerfile  requirements-scheduler.txt  scheduler.py
scout-monetization/: package-lock.json  package.json
scripts/: README.md  alibaba_cloud_security_analyzer.py  alibaba_cloud_security_scan.py  alibaba_setup_orchestrator.py  analyze-tests.js  anthropic_validator.py  (+112 more)
(+869 files in other folders)
