[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-fix-agent"
version = "1.0.0"
description = "Automated PR error fixing using Ollama LLMs"
readme = "REAL_SYSTEM_README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PR Fix Agent Team"}
]
keywords = ["ci-cd", "automation", "ollama", "llm", "error-fixing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "slowapi>=0.1.8",
    "httpx>=0.24.0",
    "huggingface-hub>=0.20.0",
    "prometheus-client>=0.17.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.1.0",
    "black>=22.0.0",
    "ruff>=0.0.250",
    "mypy>=0.990",
    "pytest-json-report",
]

[project.scripts]
pr-fix-agent = "pr_fix_agent.cli:main"
pr-benchmark = "benchmarking_real:main"
pr-improve = "continuous_improvement_real:main"

[project.urls]
Homepage = "https://github.com/your-org/pr-fix-agent"
Documentation = "https://github.com/your-org/pr-fix-agent#readme"
Repository = "https://github.com/your-org/pr-fix-agent"
"Bug Tracker" = "https://github.com/your-org/pr-fix-agent/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
pr_fix_agent = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/pr_fix_agent"]
relative_files = true

[tool.coverage.paths]
source = [
    "src/pr_fix_agent",
    "*/pr-fix-agent/src/pr_fix_agent",
    "/app/src/pr_fix_agent",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
